Proofreading from Brian, spell check, correct handling of acronyms.

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -74,7 +74,11 @@
 \chapter*{Acronyms}
 
 \begin{acronym}[UML]
-\acro{EG}{Example}
-\end{acronym}  
+\acro{SM}{Standard Model}
+\acro{LCW}{local cluster weighted}
+\acro{MIP}{minimally ionizing particle}
+\acro{EPJC}{European Physical Journal C}
+\acro{JES}{jet energy scale}
+\end{acronym}
                    
 \endgroup
