Wrote introduction for selection chapter.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.22\xspace}
+\newcommand{\myVersion}{Version 0.23\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -77,6 +77,9 @@
 \let\kev=\keV
 \let\ev=\eV
 
+\newcommand*{\dedx}{\ensuremath{dE/dx}\xspace}
+\newcommand*{\Nss}{\ensuremath{N_{SS}}\xspace}
+\newcommand*{\met}{\ensuremath{E_T^{\mathrm{miss}}}\xspace}
 %----------------------------------------------------------------------------------------
 %	PACKAGES
 %----------------------------------------------------------------------------------------
