--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -75,6 +75,8 @@
 
 \begin{acronym}[UML]
 \acro{SM}{Standard Model}
+\acro{LHC}{Large Hadron Collider}
+\acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
 \acro{EPJC}{European Physical Journal C}
