More content in selection

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.23\xspace}
+\newcommand{\myVersion}{Version 0.24\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -80,6 +80,8 @@
 \newcommand*{\dedx}{\ensuremath{dE/dx}\xspace}
 \newcommand*{\Nss}{\ensuremath{N_{SS}}\xspace}
 \newcommand*{\met}{\ensuremath{E_T^{\mathrm{miss}}}\xspace}
+\newcommand*{\rhadron}{R-Hadron}
+\newcommand*{\rhadrons}{R-Hadrons}
 %----------------------------------------------------------------------------------------
 %	PACKAGES
 %----------------------------------------------------------------------------------------
