--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -81,6 +81,7 @@
 \acro{MIP}{minimally ionizing particle}
 \acro{EPJC}{European Physical Journal C}
 \acro{JES}{jet energy scale}
+\acro{LLP}{Long-Lived Particle}
 \end{acronym}
                    
 \endgroup
