--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.24\xspace}
+\newcommand{\myVersion}{Version 0.25\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -79,9 +79,11 @@
 
 \newcommand*{\dedx}{\ensuremath{dE/dx}\xspace}
 \newcommand*{\Nss}{\ensuremath{N_{SS}}\xspace}
+\newcommand*{\Nsplit}{\ensuremath{N_{\mathrm{split}}}\xspace}
 \newcommand*{\met}{\ensuremath{E_T^{\mathrm{miss}}}\xspace}
-\newcommand*{\rhadron}{R-Hadron}
-\newcommand*{\rhadrons}{R-Hadrons}
+\newcommand*{\rhadron}{R-Hadron\xspace}
+\newcommand*{\rhadrons}{R-Hadrons\xspace}
+\newcommand*{\MeVgcm}{$\MeV\mathrm{g}^{-1}\mathrm{cm}^2$\xspace}
 %----------------------------------------------------------------------------------------
 %	PACKAGES
 %----------------------------------------------------------------------------------------
