Filled out sm rejection section

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -75,6 +75,7 @@
 
 \begin{acronym}[UML]
 \acro{SM}{Standard Model}
+\acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
 \acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
