--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.25\xspace}
+\newcommand{\myVersion}{Version 0.26\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -83,7 +83,13 @@
 \newcommand*{\met}{\ensuremath{E_T^{\mathrm{miss}}}\xspace}
 \newcommand*{\rhadron}{R-Hadron\xspace}
 \newcommand*{\rhadrons}{R-Hadrons\xspace}
-\newcommand*{\MeVgcm}{$\MeV\mathrm{g}^{-1}\mathrm{cm}^2$\xspace}
+\newcommand*{\MeVgcm}{\ensuremath{\MeV\mathrm{g}^{-1}\mathrm{cm}^2}\xspace}
+\newcommand*{\mt}{\ensuremath{m_{\mathrm{T}}}\xspace}
+\newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}}
+\newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}}
+
+\newcommand*{\fullfig}{0.85\textwidth}
+\newcommand*{\halffig}{0.49\textwidth}
 %----------------------------------------------------------------------------------------
 %	PACKAGES
 %----------------------------------------------------------------------------------------
