Finished text in the selection chapter

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.26\xspace}
+\newcommand{\myVersion}{Version 0.27\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -59,8 +59,6 @@
 \newcommand{\Eg}{E.\,g.} 
 
 \newcommand*{\tsup}[1]{\textsuperscript{#1}}
-\newcommand*{\SM}{Standard Model}
-\newcommand*{\pt}{\ensuremath{p_T}\xspace}
 
 \newcounter{dummy} % Necessary for correct hyperlinks (to index, bib, etc.)
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
@@ -85,8 +83,10 @@
 \newcommand*{\rhadrons}{R-Hadrons\xspace}
 \newcommand*{\MeVgcm}{\ensuremath{\MeV\mathrm{g}^{-1}\mathrm{cm}^2}\xspace}
 \newcommand*{\mt}{\ensuremath{m_{\mathrm{T}}}\xspace}
+\newcommand*{\pt}{\ensuremath{p_{\mathrm{T}}}\xspace}
 \newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}}
 \newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}}
+\newcommand*{\lumi}{3.2}
 
 \newcommand*{\fullfig}{0.85\textwidth}
 \newcommand*{\halffig}{0.49\textwidth}
