--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,14 @@
 % This file was created with JabRef 2.8.1.
 % Encoding: Cp1252
 
+@article{pdg,
+      author         = "Olive, K. A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C38",
+      year           = "2014",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
+}
