Wrote first half of background chapter. Fixed some bibliography and reference issues.

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -38,16 +38,11 @@
 % Includes the file which contains all the document configurations and packages - make sure to edit this file
 \input{classicthesis-config}
 
-\addbibresource{bibliography.bib} % The file housing your bibliography
 \addbibresource{ATLAS.bib} 
 \addbibresource{eoverp.bib} 
-%\addbibresource[label=ownpubs]{Self_Publications.bib} % Uncomment for optional self-publications
-
-%\hyphenation{Put special hyphenation here}
+\addbibresource{thesis.bib}
 
 \begin{document}
-
-\frenchspacing % Reduces space after periods to make text more compact
 
 \raggedbottom % Makes all pages the height of the text on that page
 
