--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -83,6 +83,7 @@
 \acro{EPJC}{European Physical Journal C}
 \acro{JES}{jet energy scale}
 \acro{LLP}{Long-Lived Particle}
+\acro{CR}{Control Region}
 \end{acronym}
                    
 \endgroup
