--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.28\xspace}
+\newcommand{\myVersion}{Version 0.29\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -106,7 +106,7 @@ language=auto,%
 style=numeric-comp,%
 %style=authoryear-comp, % Author 1999, 2010
 %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
-sorting=nyt, % name, year, title
+sorting=none, % name, year, title
 maxbibnames=10, % default: 3, et al.
 %backref=true,%
 natbib=true % natbib compatibility mode (\citep and \citet still work)
