Quick addition for ch12

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.30\xspace}
+\newcommand{\myVersion}{Version 0.31\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -82,7 +82,8 @@
 \newcommand*{\rhadron}{R-Hadron\xspace}
 \newcommand*{\rhadrons}{R-Hadrons\xspace}
 \newcommand*{\MeVgcm}{\ensuremath{\MeV\mathrm{g}^{-1}\mathrm{cm}^2}\xspace}
-\newcommand*{\mt}{\ensuremath{m_{\mathrm{T}}}\xspace}
+\newcommand*{\mt}{\ensuremath{M_{\mathrm{T}}}\xspace}
+\newcommand*{\mdedx}{\ensuremath{M_{\dedx}}\xspace}
 \newcommand*{\pt}{\ensuremath{p_{\mathrm{T}}}\xspace}
 \newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}}
 \newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}}
