--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.31\xspace}
+\newcommand{\myVersion}{Version 0.32\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -85,8 +85,8 @@
 \newcommand*{\mt}{\ensuremath{M_{\mathrm{T}}}\xspace}
 \newcommand*{\mdedx}{\ensuremath{M_{\dedx}}\xspace}
 \newcommand*{\pt}{\ensuremath{p_{\mathrm{T}}}\xspace}
-\newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}}
-\newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}}
+\newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}\xspace}
+\newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}\xspace}
 \newcommand*{\lumi}{3.2}
 
 \newcommand*{\fullfig}{0.85\textwidth}
