--- a/thesis.bib
+++ b/thesis.bib
@@ -63,3 +63,188 @@
       reportNumber   = "ATLAS-CONF-2011-016",
       SLACcitation   = "%%CITATION = ATLAS-CONF-2011-016;%%"
 }
+
+@article{extra_dim1,
+      author         = "Shah, Nausheen R. and Wagner, Carlos E. M.",
+      title          = "{Gravitons and dark matter in universal extra dimensions}",
+      journal        = "Phys. Rev.",
+      volume         = "D74",
+      year           = "2006",
+      pages          = "104008",
+      doi            = "10.1103/PhysRevD.74.104008",
+      eprint         = "hep-ph/0608140",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ANL-HEP-PR-06-54, EFI-06-09",
+      SLACcitation   = "%%CITATION = HEP-PH/0608140;%%"
+}
+
+@article{extra_dim2,
+      author         = "Feng, Jonathan L. and Rajaraman, Arvind and Takayama, Fumihiro",
+      title          = "{Graviton cosmology in universal extra dimensions}",
+      journal        = "Phys. Rev.",
+      volume         = "D68",
+      year           = "2003",
+      pages          = "085018",
+      doi            = "10.1103/PhysRevD.68.085018",
+      eprint         = "hep-ph/0307375",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-TR-2003-27",
+      SLACcitation   = "%%CITATION = HEP-PH/0307375;%%"
+}
+
+@article{leptoquark,
+      author         = "Friberg, C. and Norrbin, E. and Sjostrand, T.",
+      title          = "{QCD aspects of leptoquark production at HERA}",
+      journal        = "Phys. Lett.",
+      volume         = "B403",
+      year           = "1997",
+      pages          = "329-334",
+      doi            = "10.1016/S0370-2693(97)00543-1",
+      eprint         = "hep-ph/9704214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LU-TP-97-04",
+      SLACcitation   = "%%CITATION = HEP-PH/9704214;%%"
+}
+
+@article{newfermions,
+  title = {Long-lived quarks?},
+  author = {Frampton, Paul H. and Hung, Pham Quang},
+  journal = {Phys. Rev. D},
+  volume = {58},
+  issue = {5},
+  pages = {057704},
+  numpages = {4},
+  year = {1998},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.58.057704},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.58.057704}
+}
+
+@Article{rpv1,
+     author    = "Dreiner, Herbert K.",
+     title     = "{An introduction to explicit R-parity violation}",
+     year      = "1997",
+     eprint    = "hep-ph/9707435",
+     archivePrefix = "arXiv",
+     SLACcitation  = "%%CITATION = HEP-PH/9707435;%%"
+}
+
+@Article{rpv2,
+     author    = "Berger, Edmond L. and Sullivan, Zack",
+     title     = "{Lower limits on R-parity-violating couplings in supersymmetry}",
+     journal   = "Phys. Rev. Lett.",
+     volume    = "92",
+     year      = "2004",
+     pages     = "201801",
+     eprint    = "hep-ph/0310001",
+     archivePrefix = "arXiv",
+     doi       = "10.1103/PhysRevLett.92.201801",
+     SLACcitation  = "%%CITATION = HEP-PH/0310001;%%"
+}
+
+@article{rpv3,
+      author         = "Barbieri, R. and Berat, C. and Besancon, M. and Chemtob, M. and Deandrea, A. and others",
+      title          = "{R-parity violating supersymmetry}",
+      journal        = "Phys. Rept.",
+      volume         = "420",
+      pages          = "1",
+      doi            = "10.1016/j.physrep.2005.08.006",
+      year           = "2005",
+      eprint         = "hep-ph/0406039",
+      archivePrefix  = "arXiv",
+}
+
+
+@Article{rpc1,
+     author    = "Fairbairn, M. and others",
+     title     = "{Stable massive particles at colliders}",
+     journal   = "Phys. Rept.",
+     volume    = "438",
+     year      = "2007",
+     pages     = "1",
+     eprint    = "hep-ph/0611040",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/j.physrep.2006.10.002",
+     SLACcitation  = "%%CITATION = HEP-PH/0611040;%%"
+}
+
+@Article{rpc2,
+     author    = "Kolda, Christopher F.",
+     title     = "{Gauge-mediated supersymmetry breaking: Introduction, review and update}",
+     journal   = "Nucl. Phys. Proc. Suppl.",
+     volume    = "62",
+     year      = "1998",
+     pages     = "266",
+     eprint    = "hep-ph/9707450",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/S0920-5632(97)00667-1",
+     SLACcitation  = "%%CITATION = HEP-PH/9707450;%%"
+}
+
+@Article{rpc3,
+     author    = "Baer, Howard and Cheung, Kingman and Gunion, John F.",
+     title     = "{A Heavy gluino as the lightest supersymmetric particle}",
+     journal   = "Phys. Rev. D",
+     volume    = "59",
+     year      = "1999",
+     pages     = "075002",
+     eprint    = "hep-ph/9806361",
+     archivePrefix = "arXiv",
+     doi       = "10.1103/PhysRevD.59.075002",
+     SLACcitation  = "%%CITATION = HEP-PH/9806361;%%"
+}
+
+@Article{rpc4,
+     author    = "Gates, Jr. , S. James and Lebedev, Oleg",
+     title     = "{Searching for supersymmetry in hadrons}",
+     journal   = "Phys. Lett. B",
+     volume    = "477",
+     year      = "2000",
+     pages     = "216",
+     eprint    = "hep-ph/9912362",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/S0370-2693(00)00172-6",
+     SLACcitation  = "%%CITATION = HEP-PH/9912362;%%"
+}
+
+@Article{split1,
+     author    = "Giudice, G. F. and Romanino, A.",
+     title     = "{Split supersymmetry}",
+     journal   = "Nucl. Phys. B",
+     volume    = "699",
+     year      = "2004",
+     pages     = "65",
+     eprint    = "hep-ph/0406088",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/j.nuclphysb.2004.11.048",
+     SLACcitation  = "%%CITATION = HEP-PH/0406088;%%"
+}
+
+@Article{split2,
+     author    = "Arkani-Hamed, N. and Dimopoulos, S. and Giudice, G. F. and Romanino, A.",
+     title     = "{Aspects of split supersymmetry}",
+     journal   = "Nucl. Phys. B",
+     volume    = "709",
+     year      = "2005",
+     pages     = "3",
+     eprint    = "hep-ph/0409232",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/j.nuclphysb.2004.12.026",
+     SLACcitation  = "%%CITATION = HEP-PH/0409232;%%"
+}
+
+@article{rhadron,
+      author         = "Farrar, Glennys R. and Fayet, Pierre",
+      title          = "{Phenomenology of the Production, Decay, and Detection of New Hadronic States Associated with Supersymmetry}",
+      journal        = "Phys. Lett.",
+      volume         = "B76",
+      year           = "1978",
+      pages          = "575-579",
+      doi            = "10.1016/0370-2693(78)90858-4",
+      reportNumber   = "CALT-68-648",
+      SLACcitation   = "%%CITATION = PHLTA,B76,575;%%"
+}
