--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -75,8 +75,10 @@
 
 \begin{acronym}[UML]
 \acro{SM}{Standard Model}
+\acro{SUSY}{Supersymmetry}
 \acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
+\acro{ATLAS}{A Toroidal LHC ApparatuS}
 \acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
